Add main layout, image and icon for navigation (sidebar)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>   
+        <section class="main-wrapper">
+            <section class="sidebar">
+                <img class="logo" src="images/logo.png" alt="logo">
+                <img class="hamburger" src="images/hamburger.png" alt="hamburger">
+                <ul class="list">
+                    <li class="list__element"><img class="list__icon" src="images/icon-general-menu.svg" alt="icon"><a href="#" class="list__link">General</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-details-menu.svg" alt="icon"><a href="#" class="list__link">Details</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-links-menu.svg" alt="icon"><a href="#" class="list__link">Links</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-banners-menu.svg" alt="icon"><a href="#" class="list__link">Banners</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-personal-data-menu.svg" alt="icon"><a href="#" class="list__link">Personal data</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-payout-menu.png" alt="icon"><a href="#" class="list__link">Payout</a></li>
+                    <li class="list__element"><img class="list__icon" src="images/icon-postback-menu.svg" alt="icon"><a href="#" class="list__link">Postback</a></li>
+                </ul>
+                <h1 class="sidebar__title">your manager</h1>
+                <div class="sidebar__person">
+                    <img class="sidebar__image" src="images/sidebar-image.png" alt="">
+                    <img class="sidebar__image-online" src="images/sidebar-image-online.png" alt="">
+                    <span class="sidebar__name">Mikhael E.</span>
+                </div>
+            </section>
+            <section class="main-container">
+                <header class="head"></header>
+                <section class="wrapper"></section>
+                <section class="wrapper"></section>
+            </section>
+        </section>                          
+    </body>
 </html>
