Change section sidebar in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>   
         <section class="main-wrapper container-fluid">
             <div class="row">
+                <!--SECTION SIDEBAR -->
                 <section class="sidebar col-sm-12 col-md-12 col-lg-12">
                     <img class="logo" src="images/logo.png" alt="logo"> 
                     <a class="hamburger" href="#"><img src="images/hamburger.png" alt="hamburger"></a> 
@@ -60,7 +61,8 @@
                         <a class="sidebar__name" href="#">Mikhael E.</a>
                     </div>
                 </section>
-            </div> <!--SECTION SIDEBAR -->
+            </div> 
+            
                   
             <!--SECTION TOPBAR-->                  
             <header class="topbar">
