Change class name from list to menu in sidebar section.

--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
                     <img class="logo" src="images/logo.png" alt="logo"> 
                     <a class="hamburger" href="#"><img src="images/hamburger.png" alt="hamburger"></a> 
                     <nav class="menu">
-                        <ul class="list">
-                            <li class="list__element--active">
-                                <a href="index.html" class="list__link--active">
-                                    <img class="list__icon--active" src="images/icon-general-menu.svg" alt="icon">General
+                        <ul class="menu__list">
+                            <li class="__element--active">
+                                <a href="index.html" class="menu__link--active">
+                                    <img class="menu__icon--active" src="images/icon-general-menu.svg" alt="icon">General
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="#" class="list__link">
-                                    <img class="list__icon" src="images/icon-details-menu.svg" alt="icon">Details
+                            <li class="menu__element">
+                                <a href="#" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-details-menu.svg" alt="icon">Details
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="links.html" class="list__link">
-                                    <img class="list__icon" src="images/icon-links-menu.svg" alt="icon">Links
+                            <li class="menu__element">
+                                <a href="links.html" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-links-menu.svg" alt="icon">Links
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="#" class="list__link">
-                                    <img class="list__icon" src="images/icon-banners-menu.svg" alt="icon">Banners
+                            <li class="menu__element">
+                                <a href="#" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-banners-menu.svg" alt="icon">Banners
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="#" class="list__link">
-                                    <img class="list__icon" src="images/icon-personal-data-menu.svg" alt="icon">Personal data
+                            <li class="menu__element">
+                                <a href="#" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-personal-data-menu.svg" alt="icon">Personal data
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="#" class="list__link">
-                                    <img class="list__icon" src="images/icon-payout-menu.png" alt="icon">Payout
+                            <li class="menu__element">
+                                <a href="#" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-payout-menu.png" alt="icon">Payout
                                 </a>
                             </li>
-                            <li class="list__element">
-                                <a href="#" class="list__link">
-                                    <img class="list__icon" src="images/icon-postback-menu.svg" alt="icon">Postback
+                            <li class="menu__element">
+                                <a href="#" class="menu__link">
+                                    <img class="menu__icon" src="images/icon-postback-menu.svg" alt="icon">Postback
                                 </a>
                             </li>
                         </ul>
