Repair of the menu element.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a class="hamburger" href="#"><img src="images/hamburger.png" alt="hamburger"></a> 
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="__element--active">
+                            <li class="menu__element--active">
                                 <a href="index.html" class="menu__link--active">
                                     <img class="menu__icon--active" src="images/icon-general-menu.svg" alt="icon">General
                                 </a>
