Add variables in project.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>   
+    <body class="body-page">   
         <section class="main-wrapper container-fluid">
             <div class="row">
                 <!--SECTION SIDEBAR -->
@@ -148,7 +148,7 @@
                                 <button class="addres__button">+add new</button>
                                 <ul class="addres__list">
                                     <li class="addres__element">Home page</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.homepage.com</a>
                                     </li>
                                     <li>
@@ -164,7 +164,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Curently offer</li>
-                                    <li class="addres__element-adress">
+                                    <li class="addres__element-link">
                                         <a href="#" class="addres__link">http://www.currently.com</a>
                                     </li>
                                     <li>
@@ -180,7 +180,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Blurpix</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.blurpix.com</a>
                                     </li>
                                     <li>
@@ -196,7 +196,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Your site</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.yoursite.com</a>
                                     </li>
                                     <li>
@@ -212,7 +212,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Google</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.google.com</a>
                                     </li>
                                     <li>
@@ -228,7 +228,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Facebook</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.facebook.com</a>
                                     </li>
                                     <li>
@@ -244,7 +244,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Dashboard</li>
-                                    <li class="addres__element-adress" >
+                                    <li class="addres__element-link" >
                                         <a href="#" class="addres__link">http://www.dashboard.com</a
                                             ></li>
                                     <li>
@@ -260,7 +260,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Blurax</li>
-                                    <li class="addres__element-adress">
+                                    <li class="addres__element-link">
                                         <a href="#" class="addres__link">http://www.blurax.com</a>
                                     </li>
                                     <li>
@@ -276,7 +276,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Piece of Wine</li>
-                                    <li class="addres__element-adress">
+                                    <li class="addres__element-link">
                                         <a href="#" class="addres__link">http://www.pieceofwine.com</a>
                                     </li>
                                     <li>
@@ -292,7 +292,7 @@
                                 </ul>
                                 <ul class="addres__list">
                                     <li class="addres__element">Twitter</li>
-                                    <li class="addres__element-adress">
+                                    <li class="addres__element-link">
                                         <a href="#" class="addres__link">http://www.twitter.com</a>
                                     </li>
                                     <li>
