--- a/links.html
+++ b/links.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body-page">
     <section class="main-wrapper container-fluid">
         <div class="row">
             <!--SECTION SIDEBAR -->
@@ -20,40 +20,40 @@
                     <img src="images/hamburger.png" alt="hamburger">
                 </a>
                 <nav class="menu">
-                    <ul class="list">
-                        <li class="list__element--active">
-                            <a href="index.html" class="list__link--active">
-                                <img class="list__icon--active" src="images/icon-general-menu.svg" alt="icon">General
+                    <ul class="menu__list">
+                        <li class="menu__element--active">
+                            <a href="index.html" class="menu__link--active">
+                                <img class="menu__icon--active" src="images/icon-general-menu.svg" alt="icon">General
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="#" class="list__link">
-                                <img class="list__icon" src="images/icon-details-menu.svg" alt="icon">Details
+                        <li class="menu__element">
+                            <a href="#" class="menu__link">
+                                <img class="menu__icon" src="images/icon-details-menu.svg" alt="icon">Details
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="subpages/links.html" class="list__link">
-                                <img class="list__icon" src="images/icon-links-menu.svg" alt="icon">Links
+                        <li class="menu__element">
+                            <a href="subpages/links.html" class="menu__link">
+                                <img class="menu__icon" src="images/icon-links-menu.svg" alt="icon">Links
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="#" class="list__link">
-                                <img class="list__icon" src="images/icon-banners-menu.svg" alt="icon">Banners
+                        <li class="menu__element">
+                            <a href="#" class="menu__link">
+                                <img class="menu__icon" src="images/icon-banners-menu.svg" alt="icon">Banners
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="#" class="list__link">
-                                <img class="list__icon" src="images/icon-personal-data-menu.svg" alt="icon">Personal data
+                        <li class="menu__element">
+                            <a href="#" class="menu__link">
+                                <img class="menu__icon" src="images/icon-personal-data-menu.svg" alt="icon">Personal data
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="#" class="list__link">
-                                <img class="list__icon" src="images/icon-payout-menu.png" alt="icon">Payout
+                        <li class="menu__element">
+                            <a href="#" class="menu__link">
+                                <img class="menu__icon" src="images/icon-payout-menu.png" alt="icon">Payout
                             </a>
                         </li>
-                        <li class="list__element">
-                            <a href="#" class="list__link">
-                                <img class="list__icon" src="images/icon-postback-menu.svg" alt="icon">Postback
+                        <li class="menu__element">
+                            <a href="#" class="menu__link">
+                                <img class="menu__icon" src="images/icon-postback-menu.svg" alt="icon">Postback
                             </a>
                         </li>
                     </ul>
@@ -105,7 +105,7 @@
                             <button class="addres__button">+add new</button>
                             <ul class="addres__list">
                                 <li class="addres__element">Home page</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.homepage.com</a>
                                 </li>
                                 <li>
@@ -121,7 +121,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Curently offer</li>
-                                <li class="addres__element-adress">
+                                <li class="addres__element-link">
                                     <a href="#" class="addres__link">http://www.currently.com</a>
                                 </li>
                                 <li>
@@ -137,7 +137,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Blurpix</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.blurpix.com</a>
                                 </li>
                                 <li>
@@ -153,7 +153,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Your site</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.yoursite.com</a>
                                 </li>
                                 <li>
@@ -169,7 +169,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Google</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.google.com</a>
                                 </li>
                                 <li>
@@ -185,7 +185,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Facebook</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.facebook.com</a>
                                 </li>
                                 <li>
@@ -201,7 +201,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Dashboard</li>
-                                <li class="addres__element-adress" >
+                                <li class="addres__element-link" >
                                     <a href="#" class="addres__link">http://www.dashboard.com</a
                                         ></li>
                                 <li>
@@ -217,7 +217,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Blurax</li>
-                                <li class="addres__element-adress">
+                                <li class="addres__element-link">
                                     <a href="#" class="addres__link">http://www.blurax.com</a>
                                 </li>
                                 <li>
@@ -233,7 +233,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Piece of Wine</li>
-                                <li class="addres__element-adress">
+                                <li class="addres__element-link">
                                     <a href="#" class="addres__link">http://www.pieceofwine.com</a>
                                 </li>
                                 <li>
@@ -249,7 +249,7 @@
                             </ul>
                             <ul class="addres__list">
                                 <li class="addres__element">Twitter</li>
-                                <li class="addres__element-adress">
+                                <li class="addres__element-link">
                                     <a href="#" class="addres__link">http://www.twitter.com</a>
                                 </li>
                                 <li>
