Change name class diagrams__wrapper.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <div class="diagrams container-fluid">
-                                <div class="diagrams__wraper row">
+                                <div class="diagrams__wrapper row">
                                     <div class="diagrams__element">
                                         <span class="diagrams__text">Visit Signups</span>
                                         <span class="diagrams__number">124</span>
