Change link in link.html

--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
                             </a>
                         </li>
                         <li class="menu__element">
-                            <a href="subpages/links.html" class="menu__link">
+                            <a href="links.html" class="menu__link">
                                 <img class="menu__icon" src="images/icon-links-menu.svg" alt="icon">Links
                             </a>
                         </li>
