Change display topbar in medium screen.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 </a>
                             </li>
                             <li class="menu__element">
-                                <a href="#" class="menu__link">
+                                <a href="personal-data.html" class="menu__link">
                                     <span class="menu__icon icon-personaldata"></span>Personal data
                                 </a>
                             </li>
@@ -54,7 +54,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <!--SECTION TOPBAR-->
+                        <!--SECTION TOPBAR - HIDDEN-->
                         <header class="topbar--hidden">
                             <ul class="topbar__list">
                                 <li class="topbar__element">
