--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@
                             </a>
                         </li>
                         <li class="menu__element">
-                            <a href="#" class="menu__link">
+                            <a href="personal-data.html" class="menu__link">
                                 <span class="menu__icon icon-personaldata"></span>Personal data
                             </a>
                         </li>
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                     </ul>
-                    <!--SECTION TOPBAR-->
+                    <!--SECTION TOPBAR - HIDDEN-->
                     <header class="topbar--hidden">
                         <ul class="topbar__list">
                             <li class="topbar__element">
@@ -129,7 +129,7 @@
         <section class="main-container">
             <div class="container-fluid">
                 <div class="row">
-                        <!--SECOND WRAPPER-->
+                        <!--FIRST WRAPPER-->
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="wrapper col-sm-12 col-md-12 col-lg-12">
